mutants.out/log/src__main.rs_line_28_col_5.log

*** src/main.rs:28:5: replace parse_args -> Result<Args, String> with Ok(Default::default())

*** mutation diff:
--- src/main.rs
+++ replace parse_args -> Result<Args, String> with Ok(Default::default())
@@ -20,48 +20,17 @@
 
 struct Args {
     mode: Mode,
     width: usize,
     files: Vec<String>,
 }
 
 fn parse_args(argv: &[String]) -> Result<Args, String> {
-    let mut mode = Mode::Stdout;
-    let mut width = DEFAULT_WIDTH;
-    let mut files = Vec::new();
-    let mut rest = argv.iter();
-    while let Some(arg) = rest.next() {
-        match arg.as_str() {
-            "-i" | "--in-place" => mode = Mode::InPlace,
-            "--check" => mode = Mode::Check,
-            "-V" | "--version" => mode = Mode::Version,
-            "-h" | "--help" => return Err(USAGE.to_owned()),
-            "--width" => {
-                let value = rest.next().ok_or("--width requires a value")?;
-                width = value
-                    .parse()
-                    .map_err(|_| format!("invalid --width: {value}"))?;
-            }
-            flag if flag.starts_with("--width=") => {
-                let value = &flag["--width=".len()..];
-                width = value
-                    .parse()
-                    .map_err(|_| format!("invalid --width: {value}"))?;
-            }
-            flag if flag.starts_with('-') && flag != "-" => {
-                return Err(format!("unknown flag: {flag}"));
-            }
-            _ => files.push(arg.clone()),
-        }
-    }
-    if mode == Mode::InPlace && files.is_empty() {
-        return Err("-i requires at least one FILE".to_owned());
-    }
-    Ok(Args { mode, width, files })
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn read_stdin() -> std::io::Result<String> {
     let mut buf = String::new();
     std::io::stdin().read_to_string(&mut buf)?;
     Ok(buf)
 }
 


*** /home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=cfmt@0.1.0
       Fresh libc v0.2.186
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh regex-syntax v0.8.11
       Fresh memchr v2.8.2
       Fresh fnv v1.0.7
       Fresh linux-raw-sys v0.12.1
       Fresh autocfg v1.5.1
       Fresh bitflags v2.13.0
       Fresh once_cell v1.21.4
       Fresh fastrand v2.4.1
       Fresh wait-timeout v0.2.1
       Fresh quick-error v1.2.3
       Fresh bit-vec v0.8.0
       Fresh aho-corasick v1.1.4
       Fresh bit-set v0.8.0
       Fresh unarray v0.1.4
       Fresh proc-macro2 v1.0.106
       Fresh regex-automata v0.4.14
       Fresh getrandom v0.3.4
       Fresh getrandom v0.4.3
       Fresh zerocopy v0.8.52
       Fresh rustix v1.1.4
       Fresh quote v1.0.46
       Fresh rand_core v0.9.5
       Fresh ppv-lite86 v0.2.21
       Fresh tempfile v3.27.0
       Fresh num-traits v0.2.19
       Fresh syn v2.0.118
       Fresh rusty-fork v0.3.1
       Fresh rand_chacha v0.9.0
       Fresh rand_xorshift v0.4.0
       Fresh rand v0.9.4
       Fresh logos-codegen v0.16.1
       Fresh proptest v1.11.0
       Fresh logos-derive v0.16.1
       Fresh logos v0.16.1
       Dirty cfmt v0.1.0 (/tmp/cargo-mutants-c-format-npJ26v.tmp): the file `src/main.rs` has changed (1782619740.954889848s, 1s after last build at 1782619739.438939828s)
   Compiling cfmt v0.1.0 (/tmp/cargo-mutants-c-format-npJ26v.tmp)
     Running `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type bin --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=73dbade8f2d00eeb -C extra-filename=-e461290380d8e258 --out-dir /tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps --extern cfmt=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps/libcfmt-99f850ce46e24a52.rlib --extern logos=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib`
     Running `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=bf3b4507222dd948 -C extra-filename=-1a66513ab52c4887 --out-dir /tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps --extern cfmt=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps/libcfmt-99f850ce46e24a52.rlib --extern logos=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib --extern proptest=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps/libproptest-f3a23dcc63ec6135.rlib`
warning: unused import: `DEFAULT_WIDTH`
 --> src/main.rs:4:12
  |
4 | use cfmt::{DEFAULT_WIDTH, format_with_width};
  |            ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `Args: Default` is not satisfied
  --> src/main.rs:28:8
   |
28 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
   |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `Args`
  --> src/main.rs:21:1
   |
21 | struct Args {
   | ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `cfmt` (bin "cfmt") generated 1 warning
error: could not compile `cfmt` (bin "cfmt") due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type bin --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=73dbade8f2d00eeb -C extra-filename=-e461290380d8e258 --out-dir /tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps --extern cfmt=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps/libcfmt-99f850ce46e24a52.rlib --extern logos=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `cfmt` (bin "cfmt" test) generated 1 warning (1 duplicate)
error: could not compile `cfmt` (bin "cfmt" test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/main.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=bf3b4507222dd948 -C extra-filename=-1a66513ab52c4887 --out-dir /tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps --extern cfmt=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps/libcfmt-99f850ce46e24a52.rlib --extern logos=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib --extern proptest=/tmp/cargo-mutants-c-format-npJ26v.tmp/target/debug/deps/libproptest-f3a23dcc63ec6135.rlib` (exit status: 1)

*** result: Failure(101)
